syntax = "proto2";
package proto;

enum MessageType {
  HelloServer = 1;
  Ping = 2;
  Pong = 3;
  Battle = 4;
}

message BattleMessage {
  required string user_id = 1;
  required uint32 seq = 2;
  required bytes body = 3;
}

message PingMessage {
  required int64 timestamp = 1;
  optional string user_id = 2;
}

message PongMessage {
  required int64 timestamp = 1;
  optional string user_id = 2;
  optional string public_addr = 3;
}

message HelloServerMessage {
  required string session_id = 1;
  optional bool ok = 2;
}

message Packet {
  required MessageType type = 1;
  optional uint32 seq = 2;
  optional uint32 ack = 3;

  optional HelloServerMessage hello_server_data = 10;
  optional PingMessage ping_data = 11;
  optional PongMessage pong_data = 12;
  repeated BattleMessage battle_data = 13;
}

